--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
 
   assets:
     - images/general/
+    - images/characters/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
