--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
   assets:
     - images/general/
     - images/characters/
+    - images/villages/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
