--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ flutter:
 
   assets:
     - images/general/
-    - images/characters/
+    - images/characters/Shino/
     - images/villages/
     
 
