Little UI change and character add

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ flutter:
   assets:
     - images/general/
     - images/characters/Shino/
+    - images/characters/Shibi/
+    - images/characters/Torune/
     - images/villages/
     
 
