Character added and changed the detail screen background

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ flutter:
     - images/characters/Shino/
     - images/characters/Shibi/
     - images/characters/Torune/
+    - images/characters/Akatsuchi/
     - images/villages/
     
 
