Akebibo Jinin Added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ flutter:
     - images/characters/Shibi/
     - images/characters/Torune/
     - images/characters/Akatsuchi/
+    - images/characters/Jinin/
     - images/villages/
     
 
