Akimichi Chouji Added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
     - images/characters/Torune/
     - images/characters/Akatsuchi/
     - images/characters/Jinin/
+    - images/characters/Chouji/
     - images/villages/
     
 
