--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_slidable: ^0.6.0
   carousel_slider: ^4.0.0
   pie_chart: ^5.0.0
+  flutter_staggered_grid_view: ^0.4.0
 
 
   
