--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,9 @@ dependencies:
   carousel_slider: ^4.0.0
   pie_chart: ^5.0.0
   flutter_staggered_grid_view: ^0.4.0
-  
+  google_fonts: ^2.1.0
+
+
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -47,6 +49,7 @@ flutter:
     - images/characters/Chouji/
     - images/villages/
     - images/Clans/
+    - images/circleAvatar/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
