Akimichi Chouzi added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
     - images/characters/Akatsuchi/
     - images/characters/Jinin/
     - images/characters/Chouji/
+    - images/characters/Chouza/
     - images/villages/
     - images/Clans/
     - images/circleAvatar/
